// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditorProTable 2 > 📝 EditableProTable support recordCreatorProps.position 1`] = `[Function]`;

exports[`EditorProTable 2 > 📝 columns initialValue alway work 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-table"
  >
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
        style="padding-block-start: 0;"
      >
        <div
          class="ant-table-wrapper"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-table ant-table-middle ant-table-layout-fixed"
              >
                <div
                  class="ant-table-container"
                >
                  <div
                    class="ant-table-content"
                  >
                    <table
                      style="table-layout: fixed;"
                    >
                      <colgroup>
                        <col
                          style="width: 48px;"
                        />
                        <col
                          style="width: 48px;"
                        />
                        <col
                          style="width: 48px;"
                        />
                      </colgroup>
                      <thead
                        class="ant-table-thead"
                      >
                        <tr>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          />
                          <th
                            class="ant-table-cell"
                            scope="col"
                          />
                          <th
                            class="ant-table-cell"
                            scope="col"
                          />
                        </tr>
                      </thead>
                      <tbody
                        class="ant-table-tbody"
                      >
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="624748504"
                        >
                          <td
                            class="ant-table-cell"
                          >
                            <div
                              class="ant-form-item"
                              style="margin-block-start: -5px; margin-block-end: -5px; margin-inline-start: 0; margin-inline-end: 0;"
                            >
                              <div
                                class="ant-row ant-form-item-row"
                              >
                                <div
                                  class="ant-col ant-form-item-control"
                                >
                                  <div
                                    class="ant-form-item-control-input"
                                  >
                                    <div
                                      class="ant-form-item-control-input-content"
                                    >
                                      <span
                                        class="ant-input-affix-wrapper"
                                      >
                                        <input
                                          class="ant-input"
                                          placeholder="请输入"
                                          type="text"
                                          value="🐛 [BUG]yarn install命令 antd2.4.5会报错"
                                        />
                                        <span
                                          class="ant-input-suffix"
                                        >
                                          <span
                                            class="ant-input-clear-icon"
                                            role="button"
                                            tabindex="-1"
                                          >
                                            <span
                                              aria-label="close-circle"
                                              class="anticon anticon-close-circle"
                                              role="img"
                                            >
                                              <svg
                                                aria-hidden="true"
                                                data-icon="close-circle"
                                                fill="currentColor"
                                                fill-rule="evenodd"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                                                />
                                              </svg>
                                            </span>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            <div
                              class="ant-form-item"
                              style="margin-block-start: -5px; margin-block-end: -5px; margin-inline-start: 0; margin-inline-end: 0;"
                            >
                              <div
                                class="ant-row ant-form-item-row"
                              >
                                <div
                                  class="ant-col ant-form-item-control"
                                >
                                  <div
                                    class="ant-form-item-control-input"
                                  >
                                    <div
                                      class="ant-form-item-control-input-content"
                                    >
                                      <span
                                        class="ant-input-affix-wrapper"
                                      >
                                        <input
                                          class="ant-input"
                                          placeholder="请输入"
                                          type="text"
                                          value="123"
                                        />
                                        <span
                                          class="ant-input-suffix"
                                        >
                                          <span
                                            class="ant-input-clear-icon"
                                            role="button"
                                            tabindex="-1"
                                          >
                                            <span
                                              aria-label="close-circle"
                                              class="anticon anticon-close-circle"
                                              role="img"
                                            >
                                              <svg
                                                aria-hidden="true"
                                                data-icon="close-circle"
                                                fill="currentColor"
                                                fill-rule="evenodd"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                                                />
                                              </svg>
                                            </span>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            <div
                              class="ant-form-item"
                              style="margin-block-start: -5px; margin-block-end: -5px; margin-inline-start: 0; margin-inline-end: 0;"
                            >
                              <div
                                class="ant-row ant-form-item-row"
                              >
                                <div
                                  class="ant-col ant-form-item-control"
                                >
                                  <div
                                    class="ant-form-item-control-input"
                                  >
                                    <div
                                      class="ant-form-item-control-input-content"
                                    >
                                      <span
                                        class="ant-input-affix-wrapper"
                                      >
                                        <input
                                          class="ant-input"
                                          placeholder="请输入"
                                          type="text"
                                          value="1234"
                                        />
                                        <span
                                          class="ant-input-suffix"
                                        >
                                          <span
                                            class="ant-input-clear-icon"
                                            role="button"
                                            tabindex="-1"
                                          >
                                            <span
                                              aria-label="close-circle"
                                              class="anticon anticon-close-circle"
                                              role="img"
                                            >
                                              <svg
                                                aria-hidden="true"
                                                data-icon="close-circle"
                                                fill="currentColor"
                                                fill-rule="evenodd"
                                                focusable="false"
                                                height="1em"
                                                viewBox="64 64 896 896"
                                                width="1em"
                                              >
                                                <path
                                                  d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                                                />
                                              </svg>
                                            </span>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="ant-btn ant-btn-dashed"
          style="display: block; margin: 10px 0px; width: 100%;"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="plus"
              class="anticon anticon-plus"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="plus"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                />
                <path
                  d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
                />
              </svg>
            </span>
          </span>
          <span>
            添加一行数据
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorProTable 2 > 📝 columns support editable test 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-table"
  >
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
        style="padding-block-start: 0;"
      >
        <div
          class="ant-table-wrapper"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-table ant-table-middle ant-table-layout-fixed"
              >
                <div
                  class="ant-table-container"
                >
                  <div
                    class="ant-table-content"
                  >
                    <table
                      style="table-layout: fixed;"
                    >
                      <colgroup>
                        <col
                          style="width: 48px;"
                        />
                        <col
                          style="width: 48px;"
                        />
                      </colgroup>
                      <thead
                        class="ant-table-thead"
                      >
                        <tr>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            序号
                          </th>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          />
                        </tr>
                      </thead>
                      <tbody
                        class="ant-table-tbody"
                      >
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="624748504"
                        >
                          <td
                            class="ant-table-cell ant-table-cell-with-append"
                          >
                            <span
                              class="ant-table-row-indent indent-level-0"
                              style="padding-left: 0px;"
                            />
                            <button
                              aria-expanded="false"
                              aria-label="展开行"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                              type="button"
                            />
                            <div
                              class="ant-pro-field-index-column ant-pro-field-index-column-border"
                            >
                              1
                            </div>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            <div
                              class="ant-pro-field-index-column ant-pro-field-index-column-border"
                            >
                              1
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="624691229"
                        >
                          <td
                            class="ant-table-cell ant-table-cell-with-append"
                          >
                            <span
                              class="ant-table-row-indent indent-level-0"
                              style="padding-left: 0px;"
                            />
                            <button
                              aria-expanded="false"
                              aria-label="展开行"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                              type="button"
                            />
                            <div
                              class="ant-pro-field-index-column ant-pro-field-index-column-border"
                            >
                              2
                            </div>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            <div
                              class="ant-pro-field-index-column ant-pro-field-index-column-border"
                            >
                              2
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="624674790"
                        >
                          <td
                            class="ant-table-cell ant-table-cell-with-append"
                          >
                            <span
                              class="ant-table-row-indent indent-level-0"
                              style="padding-left: 0px;"
                            />
                            <button
                              aria-expanded="false"
                              aria-label="展开行"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                              type="button"
                            />
                            <div
                              class="ant-pro-field-index-column ant-pro-field-index-column-border"
                            >
                              3
                            </div>
                          </td>
                          <td
                            class="ant-table-cell"
                          >
                            <div
                              class="ant-pro-field-index-column ant-pro-field-index-column-border"
                            >
                              3
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="ant-btn ant-btn-dashed"
          style="display: block; margin: 10px 0px; width: 100%;"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="plus"
              class="anticon anticon-plus"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="plus"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                />
                <path
                  d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
                />
              </svg>
            </span>
          </span>
          <span>
            添加一行数据
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditorProTable 2 > 📝 renderFormItem run defaultRender 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-table"
  >
    <div
      class="ant-pro-card"
    >
      <div
        class="ant-pro-card-body"
        style="padding-block-start: 0;"
      >
        <div
          class="ant-table-wrapper"
        >
          <div
            class="ant-spin-nested-loading"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-table ant-table-middle ant-table-layout-fixed"
              >
                <div
                  class="ant-table-container"
                >
                  <div
                    class="ant-table-content"
                  >
                    <table
                      style="table-layout: fixed;"
                    >
                      <colgroup>
                        <col
                          style="width: 48px;"
                        />
                      </colgroup>
                      <thead
                        class="ant-table-thead"
                      >
                        <tr>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            序号
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="ant-table-tbody"
                      >
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="624748504"
                        >
                          <td
                            class="ant-table-cell ant-table-cell-with-append"
                          >
                            <span
                              class="ant-table-row-indent indent-level-0"
                              style="padding-left: 0px;"
                            />
                            <button
                              aria-expanded="false"
                              aria-label="展开行"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                              type="button"
                            />
                            <div
                              class="ant-form-item"
                              style="margin-block-start: -5px; margin-block-end: -5px; margin-inline-start: 0; margin-inline-end: 0;"
                            >
                              <div
                                class="ant-row ant-form-item-row"
                              >
                                <div
                                  class="ant-col ant-form-item-control"
                                >
                                  <div
                                    class="ant-form-item-control-input"
                                  >
                                    <div
                                      class="ant-form-item-control-input-content"
                                    >
                                      <div
                                        class="ant-pro-field-index-column ant-pro-field-index-column-border"
                                      >
                                        1
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="624691229"
                        >
                          <td
                            class="ant-table-cell ant-table-cell-with-append"
                          >
                            <span
                              class="ant-table-row-indent indent-level-0"
                              style="padding-left: 0px;"
                            />
                            <button
                              aria-expanded="false"
                              aria-label="展开行"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                              type="button"
                            />
                            <div
                              class="ant-pro-field-index-column ant-pro-field-index-column-border"
                            >
                              2
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="624674790"
                        >
                          <td
                            class="ant-table-cell ant-table-cell-with-append"
                          >
                            <span
                              class="ant-table-row-indent indent-level-0"
                              style="padding-left: 0px;"
                            />
                            <button
                              aria-expanded="false"
                              aria-label="展开行"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                              type="button"
                            />
                            <div
                              class="ant-pro-field-index-column ant-pro-field-index-column-border"
                            >
                              3
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="ant-btn ant-btn-dashed"
          style="display: block; margin: 10px 0px; width: 100%;"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="plus"
              class="anticon anticon-plus"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="plus"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                />
                <path
                  d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
                />
              </svg>
            </span>
          </span>
          <span>
            添加一行数据
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
